...

// MARK: - Actions
- (NSArray *)buttonArray {
    return @[
        @[@"功能配置（可选）：实名/付费/时长）", @"configSdkFunctions"],
        @[@"时长配置（可选）", @"configSdkTimeLimit"],
        @[@"初始化✅", @"initSdk"],
        @[@"登录用户\n（id，type）", @"login"],
        @[@"退出登录", @"logout"],
        @[@"更新用户类型\n（type）", @"updateUserType"],
        @[@"获取用户类型\n（id）", @"getUserType"],
        @[@"申请支付（单位分）购买前调用", @"checkPayLimit"],
        @[@"已支付（单位分）购买成功后调用", @"paySuccess"],
...
- (void)login {
    if (![self checkInitStatus]) { return; }
    
    UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"登录用户" message:@"\n账号ID = 任意字符串\n账号类型 = 数字\n\n0 = 未知（未实名）\n1 = 7岁及以下\n2 = 8-15岁\n3 = 16-17岁\n4 = 18岁及以上\n其他值 = 默认未知0" preferredStyle:UIAlertControllerStyleAlert];
    [alert addTextFieldWithConfigurationHandler:^(UITextField * _Nonnull textField) {
        textField.keyboardType = UIKeyboardTypeEmailAddress;
        textField.placeholder = @"账号ID";
    }];
    [alert addTextFieldWithConfigurationHandler:^(UITextField * _Nonnull textField) {
        textField.keyboardType = UIKeyboardTypeNumberPad;
        textField.placeholder = @"账号类型";
    }];
    UIAlertAction *purchaseAction = [UIAlertAction actionWithTitle:@"登录" style:UIAlertActionStyleDefault handler:^(UIAlertAction *action) {
        NSString *userId  = alert.textFields.firstObject.text;
        NSInteger userType = [alert.textFields[1].text integerValue];
        if (!userId || userId.length == 0) {
            userId = @"";
        }
        [AntiAddictionKit login:userId :userType];
...
