...
    }()
    
    private lazy var authButton: UIButton = {
        let b = UIButton(type: .system)
        b.isHidden = true
        b.backgroundColor = Appearance.default.blackBackgroundColor
        b.setTitle("去实名", for: .normal)
        b.setTitleColor(Appearance.default.whiteBackgroundColor, for: .normal)
        b.titleLabel?.font = UIFont.systemFont(ofSize: Appearance.default.bodyFontSize)
        b.clipsToBounds = true
        b.layer.cornerRadius = 16
        b.addTarget(self, action: #selector(authButtonTapped), for: .touchUpInside)
        return b
...
    
    private func updateSubviewLayout() {
        title = alertData.title
        textView.attributedText = alertBody(alertData.body)
        
        if (alertData.type == .timeLimitAlert) {
            backGameButton.setTitle("进入游戏", for: .normal)
        } else if (alertData.type == .payLimitAlert) {
            backGameButton.setTitle("返回游戏", for: .normal)
        }
        
        //判断用户类型 已实名即隐藏实名按钮
        if let usr = User.shared, usr.type == .unknown {
...
